# DiscordBot-C

./: CMakeLists.txt  CMakeSettings.json  Client.cpp  Client.h  EmbedMessage.cpp  EmbedMessage.h  JsonHandle.h  core.cpp  core.h  crawler.cpp  crawler.h  disable.txt  info.cpp  info.h  ofs.txt  pic_handle.py  readme.txt  request_data.h  source.cpp  userfile.cpp  userfile.h  userfileadd.cpp  userfileadd.h  userfiledel.cpp  userfiledel.h  userfilelist.cpp  userfilelist.h
